turtleart.polygon360.Polygon360.scala.code
override def run() {
  
  
  for(k<-0 to 720){
    avance(2)
    droite(1.0)
  }
  getX(3.9)
  getY(4.9)
}